[project]
name = "test-docker"
version = "0.1.0"
description = ""
authors = [
    {name = "Augusto-logo",email = "augusto2.logo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.12.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "test_docker", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
blue = "^0.9.1"
isort = "^6.0.1"
taskipy = "^1.14.1"
fastapi = {extras = ["standard"], version = "^0.115.12"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "$ poetry run uvicorn src.test_docker.app:app --host 0.0.0.0 --port 10000 --reload"
dev = "fastapi dev src/test_docker/app.py"
test = "python -m unittest tests/test_*.py"
lint = "pylint tests taskipy"